--- a/android/build.gradle
+++ b/android/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "ru.rpuxa.superwirelessadb"
-        minSdkVersion 27
+        minSdkVersion 21
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
@@ -36,4 +36,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation project(':internalServer')
+    implementation 'com.android.support:recyclerview-v7:27.0.2'
 }
