--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -12,13 +12,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-
+        android:theme="@style/Theme.AppCompat.NoActionBar">
         <service
             android:name=".services.MyService"
             android:enabled="true"
             android:exported="true" />
-
 
         <activity android:name=".view.activities.DevicesListActivity">
             <intent-filter>
@@ -27,12 +25,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
         <activity android:name=".tests.ChatActivity" />
         <activity android:name=".tests.ServiceActivity" />
 
-
+        <service
+            android:name=".services.InternalServerService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
