--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -7,19 +7,15 @@
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
 
     <application
-        android:name =".view.App"
+        android:name=".view.App"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/app_icon"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <service
-            android:name=".services.MyService"
-            android:enabled="true"
-            android:exported="true" />
 
-        <activity android:name=".view.activities.DevicesListActivity">
+        <activity android:name=".view.activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,12 +23,17 @@
             </intent-filter>
         </activity>
         <activity android:name=".tests.ChatActivity" />
-        <activity android:name=".tests.ServiceActivity" />
 
         <service
             android:name=".services.InternalServerService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
+
+        <activity android:name=".view.activities.InfoActivity"></activity>
+
+        <receiver android:name=".services.AdbReceiver" />
     </application>
+
+    x
 
 </manifest>
