--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
 
     <application
-        android:name=".view.App"
+        android:name=".other.App"
         android:allowBackup="true"
         android:icon="@drawable/app_icon"
         android:label="@string/app_name"
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
         <activity
-            android:name=".view.activities.SplashActivity"
+            android:name="ru.rpuxa.superwirelessadb.activities.SplashActivity"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,16 +23,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".tests.ChatActivity" />
 
         <service
             android:name=".services.InternalServerService"
             android:enabled="true"
             android:exported="false" />
 
-        <activity android:name=".view.activities.InfoActivity" />
+        <activity android:name="ru.rpuxa.superwirelessadb.activities.InfoActivity" />
 
-        <activity android:name=".view.activities.MainActivity" />
+        <activity android:name="ru.rpuxa.superwirelessadb.activities.MainActivity" />
 
         <receiver android:name=".services.AdbReceiver" />
     </application>
